--- a/Experience.html
+++ b/Experience.html
@@ -3,7 +3,7 @@
 <head> 
 <title>Skylar's Website</title>
 </head>
-	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 
 
 		<header>
