--- a/Photography.html
+++ b/Photography.html
@@ -4,7 +4,7 @@
 <head> 
 <title>Skylar's Website</title>
 </head>
-	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 
 	
 		<header>
