--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 	
 <h3>Three Fun Facts About Me!</h3>
 <dl>
-<strong><dt>This Summer</dt></strong>
+<dt>This Summer</dt>
 		<dd>I worked in Tel Aviv, Israel.</dd>
-<strong><dt>Favorite Place</dt></strong>
+<dt>Favorite Place</dt>
 		<dd>My favorite place I've traveled to is Portugal.</dd>
-<strong><dt>In My Free Time</dt></strong>
+<dt>In My Free Time</dt>
 		<dt>I love to paint and Draw.</dt>
 </dl>
 	
@@ -51,7 +51,7 @@ Email: Gronich@wisc.edu
 <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="HORIZONTAL" data-vanity="skylargronich" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/skylargronich?trk=profile-badge">Skylar Gronich</a></div>
               
-</p>
+
 </article>
 
 	</section>
