--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 </nav>
 </header>
 <section>
-	<main>
+	
 		<p><strong>Hi, I’m Skylar Gronich</strong></p>
 <p>I’m a Junior at the <a href="https://business.wisc.edu">University of Wisconsin Madison School of Business</a>, majoring in Marketing with a certificate in Digital Studies. I’m from Long Island, New York, but I am currently studying in Madison this semester. From a young age, I have always been extremely passionate about the arts, specifically drawing, painting, and both digital and film photography. In my free time, I enjoy traveling, spending time with friends and family, watching movies, and exploring new places in Madison!</p>
-</main>
+
 
 <article>
 
@@ -34,7 +34,7 @@
 <dt>Favorite Place</dt>
 		<dd>My favorite place I've traveled to is Portugal.</dd>
 <dt>In My Free Time</dt>
-		<dt>I love to paint and Draw.</dt>
+		<dd>I love to paint and Draw.</dd>
 </dl>
 	
 </article>
